# DeCC

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: asset1.srt  asset1_fixed.srt
src/: encoding_utils.rs  lib.rs  main.rs
