[package]
name = "decc"
version = "0.1.0"
edition = "2021"
authors = ["Dagan Martinez"]
rust-version = "1.58"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.15", features = ["derive"] }
regex = "1.6.0"

[dependencies.srtlib]
version = "0.1.2"
git = "https://github.com/Property404/srtlib"
branch="Property404/asref-path"

[dev-dependencies]
tempfile = "3.3.0"
