[package]
name = "decc"
version = "0.1.0"
edition = "2021"
authors = ["Dagan Martinez"]
rust-version = "1.74"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.15", features = ["derive"] }
encoding_rs = "0.8.31"
regex = "1.6.0"
srtlib = "0.1.3"

[dev-dependencies]
tempfile = "3.3.0"
